--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^4.17.4",
     "axios": "^0.24.0",
     "bootstrap": "^4.5.0",
     "font-awesome": "^4.7.0",
@@ -19,10 +20,13 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.2.1",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.1.0",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
     "touch": "^3.1.0",
     "web-vitals": "^2.1.2"
   },
